[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}


[project]
name = "runviewer"
description = "A program to view shots compiled by labscript"
authors = [
    {name = "The labscript suite community", email = "labscriptsuite@googlegroups.com"},
]
keywords = ["experiment control", "automation"]
license = {file = 'LICENSE.txt'}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.6"
dependencies = [
    "desktop-app>=0.1.2",
    "importlib_metadata",
    "labscript_utils>=3.1.0b1",
    "labscript-c-extensions",
    "pyqtgraph>=0.11.1",
    "qtutils>=2.0.0",
    "zprocess",
    "numpy>=1.15",
    "scipy",
    "h5py",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "http://labscriptsuite.org/"
Documentation = "https://docs.labscriptsuite.org/"
Repository = "https://github.com/labscript-suite/runviewer/"
Downloads = "https://github.com/labscript-suite/runviewer/releases/"
Tracker = "https://github.com/labscript-suite/runviewer/issues/"

[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
    "myst_parser==2.0.0",
]

[project.scripts]
runviewer = "desktop_app:entry_point"

[project.gui-scripts]
runviewer-gui = "desktop_app:entry_point"
