[metadata]
name = runviewer
description = A program to view shots compiled by labscript
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/runviewer
    Download=https://github.com/labscript-suite/runviewer/releases
    Tracker=https://github.com/labscript-suite/runviewer/issues
keywords = experiment visualization
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  labscript_devices
  labscript_utils>=2.15
  pyqtgraph>=0.9.10
  qtutils>=2.0.0
  zprocess
  numpy>=1.15
  scipy
  h5py
setup_requires =
  setuptools_scm

[dist_conda]
pythons = 3.6, 3.7, 3.8
platforms = linux-64,win-32,win-64,osx-64
force_conversion = True
