[metadata]
name = runviewer
description = A program to view shots compiled by labscript
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/runviewer
    Download=https://github.com/labscript-suite/runviewer/releases
    Tracker=https://github.com/labscript-suite/runviewer/issues
keywords = experiment visualization
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  desktop-app>=0.1.2
  importlib_metadata
  labscript_utils>=3.1.0b1
  labscript-c-extensions
  pyqtgraph>=0.11.0rc0
  qtutils>=2.0.0
  zprocess
  numpy>=1.15
  scipy
  h5py

[options.entry_points]
console_scripts =
  runviewer = desktop_app:entry_point
gui_scripts = 
  runviewer-gui = desktop_app:entry_point

[options.extras_require]
pyqt = PyQt5
docs = 
  PyQt5
  Sphinx==4.4.0
  sphinx-rtd-theme==0.5.2
  recommonmark==0.6.0
  m2r==0.2.1
  mistune<2.0.0
